<resources>
    <string name="app_name">Önim.kz</string>
    <string name="tirkelu">Тіркелу</string>
    <string name="kiru">Кіру</string>
    <string name="email_jazynyz">Қолданушы есім жазыңыз</string>
    <string name="tel_nom_jazynyz">Телефон номеріңізді жазыңыз</string>
    <string name="atynyzdy_jazynyz">Атыңызды жазыңыз</string>
    <string name="qupia_soz_jazynyz">Құпиясөз жазыңыз</string>
    <string name="qupia_soz_saikes_kelmeidi">Құпиясөз сәйкес келмейді</string>
    <string name="zhana_qupia_soz_jazynyz">Жаңа құпиясөз жазыңыз</string>
    <string name="zhana_qupia_soz_6">Жаңа құпиясөз 6 таңбадан кіші болмауы керек</string>
    <string name="esimi_bos_emes"> есімі бос емес</string>
    <string name="men_erejelermen">Мен барлық ережелермен келісемін</string>
    <string name="barlyq_erejelermen">Барлық ережелермен келісуіңіз қажет</string>
    <string name="endigi_paraqsha">Ендігі парақшаңыз бар ма?</string>
    <string name="paraqsha_ashpa">Парақша ашпадыңыз ба?</string>
    <string name="paraqsha">Парақша</string>
    <string name="paraqshadan_shygu">Парақшадан шығу</string>
    <string name="paraqshadan_shygudy">Парақшадан шығуды қалайсыз ба?</string>
    <string name="qosymsha">Қосымша</string>
    <string name="qosymshadan_shygudy">Қосымшадан шығуды қалайсызба?</string>
    <string name="ia">Иә</string>
    <string name="zhoq">Жоқ</string>
    <string name="qupia_sozdi_korsetu">Құпиясөзді көрсету</string>
    <string name="okinishke_orai_tirkelu">Өкінішке орай сіз тіркеле алмадыңыз</string>
    <string name="okinishke_orai_kiru">Өкінішке орай сіз кіре алмадыңыз</string>
    <string name="kute_turynyz">Күте тұрыңыз...</string>
    <string name="barlygy">Барлығы</string>
    <string name="shop">Шөп</string>
    <string name="zhem">Жем</string>
    <string name="suzgi">Сүзгі</string>
    <string name="aimaq">Аймақ</string>
    <string name="barlyq_aimaq">Барлық аймақ</string>
    <string name="bagasy">Бағасы, ₸</string>
    <string name="kein">кейін</string>
    <string name="dein">дейін</string>
    <string name="keneitilgen_s_korsetu">Кеңейтілген сүзгіні көрсету</string>
    <string name="habarlandyrudy_k">хабарландыруды көрсету</string>
    <string name="turi">Түрі</string>
    <string name="photosureti_bar">Фотосуреті бар</string>
    <string name="tasymaldaushylary_bar">Тасымалдаушылары бар</string>
    <string name="satushynyn_salgan_u">Сатушының салған уақыты, күн/ай/жыл</string>
    <string name="kun_ai_zhyl">күн/ай/жыл</string>
    <string name="barlyq_sany">Барлық саны, түк/кг</string>
    <string name="barlyq_shop_sany">Барлық шөп саны, түк</string>
    <string name="barlyq_zhem_sany">Барлық жем саны, тонна</string>
    <string name="tukten_kg_bastap">түктен/килограммнан бастап</string>
    <string name="tukten_bastap">түктен бастап</string>
    <string name="kilogrammnan_bastap">килограммнан бастап</string>
    <string name="san">сан</string>
    <string name="suzgini_tazalau">Сүзгіні тазалау</string>
    <string name="keneitilgen_s">Кеңейтілген сүзгі</string>
    <string name="satushy_aty">Сатушы аты</string>
    <string name="satushy_nomeri">Сатушы номері</string>
    <string name="satushy_kometari">Сатушы коментариі</string>
    <string name="tauarlar">Тауарлар</string>
    <string name="malimetterdi_ozgertu">Мәліметтерді өзгерту</string>
    <string name="saqtau">Сақтау</string>
    <string name="tandauly_tauarlar">Таңдаулы тауарлар</string>
    <string name="menin_habarlamalarym">Менің хабарламаларым</string>
    <string name="zhana_habarlandyru_engizu">Жаңа хабарландыру енгізу</string>
    <string name="habarlany_engizu">Хабарламаны енгізу</string>
    <string name="habarlany_ozgertu">Хабарламаны өзгерту</string>
    <string name="habarlany_joiu">Хабарламаны жою</string>
    <string name="qosymsha_turaly">Қосымша туралы</string>
    <string name="bagalau">Бағалау</string>
    <string name="til_auystyru">Тіл ауыстыру</string>
    <string name="zhobaga_qooldau_korsetu">Жобаға қолдау көрсету</string>
    <string name="dostarmen_bolisu">Достармен бөлісу</string>
    <string name="usynystar">Ұсыныстар мен көмек сұрау</string>
    <string name="zheke_kab">Жеке кабинет</string>
    <string name="txt_muqtaj">Önim.kz қосымшасы түскен сумманың бір бөлігін мұқтаж жандарға береді.Сіз қосымшаға қолдау көрсету арқылы жақсылық жасай аласыз.</string>
    <string name="txt_qoldau">“Önim.kz” сөзін жазу арқылы арқылы қосымшаға қолдау білдір.</string>
    <string name="txt_tekseru_email">Email ға жіберілген хаттағы сілтемеден өтіңіз</string>
    <string name="koshirildi">Көшірілді</string>
</resources>