<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".SuzgiActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/layout_turi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/suzgi_layout_top"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/txt_turi_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turi"
            android:textSize="12dp"
            android:textColor="@color/color_write"/>
        <TextView
            android:id="@+id/txt_turi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barlygy"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_below="@id/txt_turi_2"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:src="@drawable/next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/suzgi">
        <TextView
            android:id="@+id/txt_bagasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagasy"
            android:textSize="12dp"
            android:textColor="@color/color_write"/>
        <EditText
            android:id="@+id/edt_baga_kein"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:textSize="15dp"
            android:background="@drawable/baga_outline"
            android:hint="@string/kein"
            android:paddingLeft="5dp"
            android:numeric="integer"
            android:textColorHint="@color/color_write"
            android:textColor="@color/black"
            android:layout_below="@id/txt_bagasy"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/edt_baga_dein"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:textSize="15dp"
            android:background="@drawable/baga_outline"
            android:hint="@string/dein"
            android:numeric="integer"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_write"
            android:layout_below="@id/txt_bagasy"
            android:layout_toRightOf="@+id/edt_baga_kein"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_aimaq"
        style="@style/suzgi">
        <TextView
            android:id="@+id/txt_aimaq2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aimaq"
            android:textSize="12dp"
            android:textColor="@color/color_write"/>
        <TextView
            android:id="@+id/txt_aimaq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barlyq_aimaq"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_below="@id/txt_aimaq2"
            android:layout_marginTop="5dp"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:src="@drawable/next"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/suzgi">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photosureti_bar"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/checkbox_photo"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:buttonTint="@color/main_color"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/suzgi">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasymaldaushylary_bar"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"/>
        <CheckBox
            android:id="@+id/checkbox_tasmaldau"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:buttonTint="@color/main_color"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/suzgi">
        <TextView
            android:id="@+id/txt_uaqyty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satushynyn_salgan_u"
            android:textSize="12dp"
            android:textColor="@color/color_write"/>
        <EditText
            android:id="@+id/edt_uaqyt"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:textSize="15dp"
            android:background="@drawable/baga_outline"
            android:hint="@string/kun_ai_zhyl"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_write"
            android:layout_below="@id/txt_uaqyty"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/txt_kein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/kein"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:layout_below="@id/txt_uaqyty"
            android:layout_toRightOf="@+id/edt_uaqyt"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/suzgi_layout_bottom"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="1dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/txt_sany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barlyq_sany"
            android:textSize="12dp"
            android:textColor="@color/color_write"/>
        <EditText
            android:id="@+id/edt_sany"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:textSize="15dp"
            android:background="@drawable/baga_outline"
            android:hint="@string/san"
            android:numeric="integer"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_write"
            android:layout_below="@id/txt_sany"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/txt_tonnadan_kg_bastap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/tukten_kg_bastap"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:layout_below="@id/txt_sany"
            android:layout_toRightOf="@+id/edt_sany"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/btn_habarlandyru_korsetu"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        android:backgroundTint="@color/main_color"
        android:layout_gravity="center_horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/txt_habarlandyru_sany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:text="154"
                    android:layout_marginRight="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:text="@string/habarlandyrudy_k"
                    android:layout_marginLeft="3dp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/suzgini_tazalau"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="15dp"
        android:backgroundTint="@color/red"
        android:layout_gravity="center_horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:text="@string/suzgini_tazalau"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="3dp"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer"
        android:paddingRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keneitilgen_s"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</RelativeLayout>