<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tirkelu"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/baga_outline"
            android:layout_marginTop="30dp"
            android:hint="@string/email_jazynyz"
            android:paddingLeft="10dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_write"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"/>
        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp"
            android:numeric="integer"
            android:textColor="@color/black"
            android:background="@drawable/baga_outline"
            android:layout_marginTop="30dp"
            android:hint="@string/tel_nom_jazynyz"
            android:paddingLeft="10dp"
            android:textColorHint="@color/color_write"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="10dp"/>
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/baga_outline"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:hint="@string/atynyzdy_jazynyz"
            android:paddingLeft="10dp"
            android:textColorHint="@color/color_write"
            android:drawableLeft="@drawable/user2"
            android:drawablePadding="10dp"/>
        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/baga_outline"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:hint="@string/qupia_soz_jazynyz"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:textColorHint="@color/color_write"
            android:drawableLeft="@drawable/block"
            android:drawablePadding="10dp"/>
    </LinearLayout>
    <CheckBox
        android:id="@+id/checkbox_show_password"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:buttonTint="@color/main_color"/>
    <TextView
        android:id="@+id/txt_show_password"
        android:layout_below="@id/ll"
        android:layout_toRightOf="@id/checkbox_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qupia_sozdi_korsetu"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"/>
    <CheckBox
        android:id="@+id/checkbox_agree"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_show_password"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:buttonTint="@color/main_color"/>
    <TextView
        android:id="@+id/txt_kelisu"
        android:layout_below="@id/txt_show_password"
        android:layout_toRightOf="@id/checkbox_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/men_erejelermen"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="3dp"/>
    <ImageView
        android:id="@+id/img_document"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/document"
        android:layout_below="@id/txt_show_password"
        android:layout_toRightOf="@id/txt_kelisu"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/btn_tirkelu"
        android:layout_below="@id/txt_kelisu"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="15dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_color">
                <TextView
                    android:id="@+id/txt_tirkelu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:text="@string/tirkelu"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="3dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_tirkelu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/endigi_paraqsha"/>
        <TextView
            android:id="@+id/txt_kiru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/kiru"/>
    </LinearLayout>
</RelativeLayout>