<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="350dp"
    android:layout_height="232dp"
    app:cardCornerRadius="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/main_color"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suzgi"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/back"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp">
            <TextView
                android:id="@+id/txt_aimaq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aimaq"
                android:textSize="12dp"
                android:textColor="@color/color_write"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barlyq_aimaq"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_below="@id/txt_aimaq"
                android:layout_marginTop="3dp"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="16dp"
                android:src="@drawable/next"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp">
            <TextView
                android:id="@+id/txt_bagasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bagasy"
                android:textSize="12dp"
                android:textColor="@color/color_write"/>

            <EditText
                android:id="@+id/edt_baga_kein"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_below="@id/txt_bagasy"
                android:layout_marginTop="1dp"
                android:background="@drawable/baga_outline"
                android:hint="@string/kein"
                android:paddingLeft="5dp"
                android:numeric="integer"
                android:textColor="@color/black"
                android:textColorHint="@color/color_write"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/edt_baga_dein"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:textSize="15dp"
                android:background="@drawable/baga_outline"
                android:hint="@string/dein"
                android:numeric="integer"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/color_write"
                android:layout_below="@id/txt_bagasy"
                android:layout_toRightOf="@+id/edt_baga_kein"
                android:layout_marginTop="3dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background"/>
        <RelativeLayout
            android:id="@+id/keneitilgen_s_korsetu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keneitilgen_s_korsetu"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="16dp"
                android:src="@drawable/next"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/main_color"
            android:paddingTop="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:text="154"
                    android:layout_marginRight="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:text="@string/habarlandyrudy_k"
                    android:layout_marginLeft="3dp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>